--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,7 @@ import Header from '../components/Header';
 import Hero from '../components/Hero';
 import Features from '../components/Features';
 import About from '../components/About';
-import Pricing from '../components/Pricing';
-import Testimonials from '../components/Testimonials';
-import Blog from '../components/Blog';
+import Portfolio from '../components/Portfolio';
 import Contact from '../components/Contact';
 import Footer from '../components/Footer';
 ---
@@ -17,8 +15,8 @@ import Footer from '../components/Footer';
     <Hero />
     <Features />
     <About />
-    <Testimonials />
-    <Contact />
+    <Portfolio />
+    <Contact client:only />
   </main>
   <Footer />
 </Layout>
